src/test/deca/syntax/valid/objet/This.deca
// Description : test this avec selection
// Resultats : ok

class Thing {

    int i;
    
    int getI(){
        this.i = i;
    }
}


