src/test/deca/syntax/invalid/sansobjet/MinusInt.deca
//mismatched input ';' 
//Description: test soustraction incorrecte
//Resultats: erreur ligne 5: pas de deuxieme terme a droite (sum_exp)
{
    int i = 1-;
}
